--- a/css/style.css
+++ b/css/style.css
@@ -23,18 +23,78 @@ body {
 
 /* nav links */
 .navbar-toggler {
-   outline: none !important;
+   width: 30px;
+   height: 20px;
+   position: relative;
+   transition: .5s ease-in-out;
+}
+
+.navbar-toggler,
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+   outline: none;
+   box-shadow: none;
+   border: 0;
+}
+
+.navbar-toggler span {
+   margin: 0;
+   padding: 0;
 }
 
 .toggler-icon {
-   font-size: 2.5rem;
-   color: var(--mainBlue);
+   display: block;
+   position: absolute;
+   height: 3px;
+   width: 100%;
+   background: var(--mainBlue);
+   border-radius: 1px;
+   opacity: 1;
+   left: 0;
+   transform: rotate(0deg);
+   transition: .25s ease-in-out;
+}
+
+.middle-bar {
+   margin-top: 0px;
+}
+
+.navbar-toggler .top-bar {
+   margin-top: 0px;
+   transform: rotate(135deg);
+}
+
+.navbar-toggler .middle-bar {
+   opacity: 0;
+   filter: alpha(opacity=0);
+}
+
+.navbar-toggler .bottom-bar {
+   margin-top: 0px;
+   transform: rotate(-135deg);
+}
+
+.navbar-toggler.collapsed .top-bar {
+   margin-top: -20px;
+   transform: rotate(0deg);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+   opacity: 1;
+   filter: alpha(opacity=100);
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+   margin-top: 20px;
+   transform: rotate(0deg);
 }
 
 .nav-link {
    color: var(--mainBlue);
    transition: all 1s ease-in-out;
    font-size: 1.5rem;
+   margin-left: 25px;
 }
 
 .nav-link:hover {
