--- a/css/style.css
+++ b/css/style.css
@@ -402,47 +402,121 @@ body {
 }
 
 /** Blog **/
-.blog {
-   background: var(--mainGrey);
+#blog {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   padding: 40px;
+   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 
-#blog .banner-title {
+.blog-heading {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+}
+
+.blog-heading span {
    color: var(--mainBlue);
 }
 
-.card {
-   border-radius: 15px;
-   padding: 10px;
+.blog-heading h3 {
+   font-size: 2.4rem;
 }
 
-.card img {
-   width: 50%;
+.blog-container {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin: 20px 0;
+   flex-wrap: wrap;
 }
 
-.img-container { 
-   float: left;
-   padding: 10px;
-   position: relative;
-   overflow: hidden;
-   cursor: pointer;
-   width: 25%;
-   height: 25%;
+.blog-box {
+   width: 350px;
+   background: #fff;
+   border: 2px solid var(--mainBlue);
+   border-radius: 5px;
+   margin: 20px;
 }
 
-.img-row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.image-item {
+.blog-img {
    width: 100%;
-   display: block;
-   height: 100%;
+   height: auto;
 }
 
-.img-container:hover .store-img {
-   transform: scale(1.2);
+.blog-img img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   object-position: center;
+   border-top-left-radius: 3px;
+   border-top-right-radius: 3px;
+}
+
+.blog-text {
+   padding: 30px;
+   display: flex;
+   flex-direction: column;
+}
+
+.blog-text span {
+   font-size: 0.9rem;
+}
+
+.blog-text .blog-title {
+   font-size: 1.3rem;
+   font-weight: 500;
+   color: #000;
+}
+
+.blog-text .blog-title:hover {
+   color: var(--mainBlue);
+   transition: all ease 0.3s;
+}
+
+.blog-text p {
+   font-size: 0.9rem;
+   display: -webkit-box;
+   -webkit-line-clamp: 3;
+   -webkit-box-orient: vertical;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   margin: 20px 0;
+}
+
+.blog-text a {
+   color: #000;
+}
+
+.blog-text a:hover {
+   color: var(--mainBlue);
+   transition: all ease 0.3s;
+}
+
+@media (max-width: 1250px) {
+   .blog-box {
+      width: 35%;
+   }
+}
+
+@media (max-width: 820px) {
+   .blog-box {
+      width: 70%;
+   }
+}
+
+@media (max-width: 550px) {
+   #blog {
+      padding: 20px;
+   }
+
+   .blog-box {
+      margin: 20px 10px;
+      width: 100%;
+   }
 }
 
 /** CONTACT **/
